syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "com.mercant.real.estate";
option java_outer_classname = "ValueOmiGrpcProto";

package valueomi;

service ValueOmiGrpc {
  rpc allValueOmi (google.protobuf.Empty) returns (stream ResponseValueOmi) {}
}

message ResponseValueOmi {
  string message = 1;
}
